# ArbiShark

./: .env  .env.example  Cargo.toml  Justfile  README.md  config.toml  deploy.ps1  deploy.sh  orbit.toml
cache/: solidity-files-cache.json
cli/: package.json
cli/src/: index.ts
contracts/: DEPLOY.md  DemoMarket.sol
dashboard/: index.html
docs/: ARCHITECTURE.md  DOCUMENTATION.md  README.md  TECHNICAL.md  clob-api-pattern-polymarket.md  context.md  demo-script.md  implementation.md  math.md  orbit.md  spec.md  stylus.md
docs/arbitrum/: doc.md
docs/metamask/: v1.md  v2.md
envio/: config.yaml  schema.graphql
envio/src/: EventHandlers.ts
examples/: DemoMarket.sol
src/: api.rs  arb.rs  clob.rs  config.rs  constraint.rs  core.rs  engine.rs  execution.rs  fee_calibrator.rs  fees.rs  latency.rs  main.rs  market.rs  market_client.rs  metamask.rs  metrics.rs  permission_guard.rs  plugins.rs  positions.rs  risk.rs  simulation.rs  slippage.rs  solana.rs  types.rs  wallet.rs  websocket.rs
