[package]
name = "polyshark"
version = "0.1.0"
edition = "2024"
default-run = "polyshark"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = "1.0.228"
serde_json = "1.0.147"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
rand = "0.8"
rand_distr = "0.4"
solana-client = "1.18"
solana-sdk = "1.18"
