[package]
name = "arbishark"
version = "0.1.0"
edition = "2021"
default-run = "arbishark"

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread", "test-util"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
rand = "0.8"
rand_distr = "0.4"
solana-client = "1.18"
solana-sdk = "1.18"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
toml = "0.8"
warp = "0.3"
async-trait = "0.1"
once_cell = "1.21.3"

[dev-dependencies]
tokio-test = "0.4"
